# simESI-fmm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dataAnalysis/: movie.py  runtime.py  sysinfo.py
inputFiles/: default.txt
inputFiles/charmm36.ff/: aminoacids.c.tdb  aminoacids.hdb  aminoacids.rtp  carb.c.tdb  carb.r2b  cmap.itp  ethers.c.tdb  ethers.n.tdb  ethers.rtp  ffbonded.itp  ffmissingdihedrals.itp  ffnonbonded.itp  na.c.tdb  na.hdb  na.r2b  nbfix.itp
inputFiles/mdp_files/: em.mdp  nvt.mdp  nvt_FMM.mdp  prodrun.mdp  prodrun_FMM.mdp
inputFiles/top_files/: aceh.gro  aceh.itp  n2.gro  n2.itp  nh3.gro  nh3.itp  nh4.gro  nh4.itp  o2.gro  o2.itp  oh.gro  pure_water.top  sol.gro
plotting/: composition.py
resources/charmm36.ff/: aminoacids.n.tdb  aminoacids.r2b  atomtypes.atp  carb.hdb  carb.n.tdb  carb.rtp  ethers.hdb  ethers.r2b  forcefield.doc  forcefield.itp  ions.itp  na.n.tdb  na.rtp
resources/mdp_files/: em.mdp  nvt.mdp  nvt_FMM.mdp  prodrun.mdp  prodrun_FMM.mdp
resources/top_files/: ace.gro  ace.itp  aceh.gro  h3o.gro  h3o.itp  oh.itp  sol.gro  tip4p_2005.itp
src/: Arguments.cpp  Atmosphere.cpp  Charge.cpp  Classes.cpp  Clustering.cpp  Coordinates.cpp  Core.cpp  Core.h  Disulfides.cpp  DoExchanges.cpp  DropletFormation.cpp  Equilibriation.cpp  Evaporation.cpp  Files.cpp  GasPhaseVelocities.cpp  Gmx.cpp  Grotthuss.cpp  MakeDirs.cpp  Maxwell.cpp  Pairs.cpp  ParseCoords.cpp  Recenter.cpp  Simulation.cpp  TitratableSites.cpp  Topology.cpp  Transforms.cpp  UnpackPKA.cpp  WriteCoords.cpp  main.cpp  pH.cpp
src/Charge/: Charge.cpp  Charge.h  ForcefieldParser.cpp  ForcefieldParser.h
src/Clustering/: Clustering.cpp  Clustering.h  DisjointSetUnion.h
src/Exchanges/: DoExchanges.cpp  DoExchanges.h  Exchange.cpp  Exchange.h  FindExchanges.cpp  FindExchanges.h  MobileProtons.cpp  MobileProtons.h  Transforms.cpp  Transforms.h
src/Math/: Constants.h  MathUtils.cpp  MathUtils.h  RNG.cpp  RNG.h  Vec3D.h
src/Models/: Atom.cpp  Atom.h  Protein.cpp  Protein.h  Residue.cpp  Residue.h
src/Parameters/: ParamInfoWriter.cpp  ParamInfoWriter.h  Parameters.cpp  Parameters.h  SettingsFileReader.cpp  SettingsFileReader.h
src/State/: ParseGRO.cpp  ParsePDB.cpp  State.h  UpdateState.cpp  WriteGRO.cpp  WritePDB.cpp
src/System/: Initialize.cpp  Run.cpp  System.h
src/Topology/: Atmosphere.cpp  Atmosphere.h  CoordinateManip.cpp  CoordinateManip.h  DropletFormation.cpp  DropletFormation.h  Evaporation.cpp  Evaporation.h  ParsePKA.cpp  ParsePKA.h  Recentering.cpp  (+5 more)
(+23 files in other folders)
